// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`replayer > can fast forward past StyleSheetRule changes on virtual elements 1`] = `
"file-frame-4
<html>
  <head>
    <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\" />
  </head>
  <body>
    <div class=\\"replayer-wrapper\\">
      <div class=\\"replayer-mouse\\"></div>
      <canvas
        class=\\"replayer-mouse-tail\\"
        width=\\"1000\\"
        height=\\"800\\"
        style=\\"display: inherit\\"
      ></canvas
      ><iframe
        sandbox=\\"allow-same-origin\\"
        scrolling=\\"no\\"
        width=\\"1000\\"
        height=\\"800\\"
        style=\\"display: inherit; pointer-events: none\\"
      ></iframe>
    </div>
  </body>
</html>


file-frame-5
<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\" />
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"file-cid-0\\" />
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"file-cid-1\\" />
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"file-cid-2\\" />
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"file-cid-3\\" />
  </head>
  <body>
    <a class=\\"css-added-at-1000-deleted-at-2500\\">string</a>
  </body>
</html>


file-cid-0
@charset \\"utf-8\\";

.rr-block { background: currentcolor; }

noscript { display: none !important; }

html.rrweb-paused *, html.rrweb-paused ::before, html.rrweb-paused ::after { animation-play-state: paused !important; }


file-cid-1
@charset \\"utf-8\\";

.css-added-at-400 { padding: 1.3125rem; flex: 0 0 auto; width: 100%; }


file-cid-2
@charset \\"utf-8\\";

.css-added-at-200-overwritten-at-3000 { opacity: 1; transform: translateX(0px); }

.css-added-at-500-overwritten-at-3000 { border: 1px solid blue; }


file-cid-3
@charset \\"utf-8\\";

.css-added-at-200 { position: fixed; top: 0px; right: 0px; left: 4rem; z-index: 15; flex-shrink: 0; height: 0.25rem; overflow: hidden; background-color: rgb(17, 171, 209); }

.css-added-at-200.alt { height: 0.25rem; background-color: rgb(190, 232, 242); opacity: 0; transition: opacity 0.5s ease-in 0.1s; }

.css-added-at-1000-deleted-at-2500 { display: flex; flex-direction: column; min-width: 60rem; min-height: 100vh; color: blue; }

.css-added-at-200.alt2 { padding-left: 4rem; }
"
`;

exports[`replayer > can fast forward past StyleSheetRule deletion on virtual elements 1`] = `
"file-frame-4
<html>
  <head>
    <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\" />
  </head>
  <body>
    <div class=\\"replayer-wrapper\\">
      <div class=\\"replayer-mouse\\"></div>
      <canvas
        class=\\"replayer-mouse-tail\\"
        width=\\"1000\\"
        height=\\"800\\"
        style=\\"display: inherit\\"
      ></canvas
      ><iframe
        sandbox=\\"allow-same-origin\\"
        scrolling=\\"no\\"
        width=\\"1000\\"
        height=\\"800\\"
        style=\\"display: inherit; pointer-events: none\\"
      ></iframe>
    </div>
  </body>
</html>


file-frame-5
<!DOCTYPE html>
<html lang=\\"en\\" class=\\"rrweb-paused\\">
  <head>
    <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\" />
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"file-cid-0\\" />
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"file-cid-1\\" />
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"file-cid-2\\" />
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"file-cid-3\\" />
  </head>
  <body>
    <a class=\\"css-added-at-1000-deleted-at-2500\\">string</a>
  </body>
</html>


file-cid-0
@charset \\"utf-8\\";

.rr-block { background: currentcolor; }

noscript { display: none !important; }

html.rrweb-paused *, html.rrweb-paused ::before, html.rrweb-paused ::after { animation-play-state: paused !important; }


file-cid-1
@charset \\"utf-8\\";

.css-added-at-400 { padding: 1.3125rem; flex: 0 0 auto; width: 100%; }


file-cid-2
@charset \\"utf-8\\";

.css-added-at-200-overwritten-at-3000 { opacity: 1; transform: translateX(0px); }

.css-added-at-500-overwritten-at-3000 { border: 1px solid blue; }


file-cid-3
@charset \\"utf-8\\";

.css-added-at-200 { position: fixed; top: 0px; right: 0px; left: 4rem; z-index: 15; flex-shrink: 0; height: 0.25rem; overflow: hidden; background-color: rgb(17, 171, 209); }

.css-added-at-200.alt { height: 0.25rem; background-color: rgb(190, 232, 242); opacity: 0; transition: opacity 0.5s ease-in 0.1s; }

.css-added-at-200.alt2 { padding-left: 4rem; }
"
`;

exports[`replayer > can handle remote stylesheets 1`] = `
"file-frame-2
<html>
  <head>
    <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\" />
  </head>
  <body>
    <div class=\\"replayer-wrapper\\">
      <div class=\\"replayer-mouse\\"></div>
      <canvas
        class=\\"replayer-mouse-tail\\"
        width=\\"1000\\"
        height=\\"800\\"
        style=\\"display: inherit\\"
      ></canvas
      ><iframe
        sandbox=\\"allow-same-origin\\"
        scrolling=\\"no\\"
        width=\\"1000\\"
        height=\\"800\\"
        style=\\"display: inherit; pointer-events: none\\"
      ></iframe>
    </div>
  </body>
</html>


file-frame-3
<html>
  <head>
    <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\" />
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"file-cid-0\\" />
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"file-cid-1\\" />
  </head>
  <body></body>
</html>


file-cid-0
@charset \\"utf-8\\";

.rr-block { background: currentcolor; }

noscript { display: none !important; }

html.rrweb-paused *, html.rrweb-paused ::before, html.rrweb-paused ::after { animation-play-state: paused !important; }


file-cid-1
@charset \\"utf-8\\";

.OverlayDrawer-modal-187 { }

.OverlayDrawer-paper-188 { width: 100%; }

@media (min-width: 48em) {
  .OverlayDrawer-paper-188 { width: 38rem; }
}

@media (min-width: 48em) {
}

@media (min-width: 48em) {
}
"
`;

exports[`replayer > can handle removing style elements 1`] = `
"file-frame-1
<html>
  <head>
    <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\" />
  </head>
  <body>
    <div class=\\"replayer-wrapper\\">
      <div class=\\"replayer-mouse\\"></div>
      <canvas
        class=\\"replayer-mouse-tail\\"
        width=\\"1000\\"
        height=\\"800\\"
        style=\\"display: inherit\\"
      ></canvas
      ><iframe
        sandbox=\\"allow-same-origin\\"
        scrolling=\\"no\\"
        width=\\"1000\\"
        height=\\"800\\"
        style=\\"display: inherit; pointer-events: none\\"
      ></iframe>
    </div>
  </body>
</html>


file-frame-2
<html>
  <head>
    <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\" />
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"file-cid-0\\" />
  </head>
  <body></body>
</html>


file-cid-0
@charset \\"utf-8\\";

.rr-block { background: currentcolor; }

noscript { display: none !important; }

html.rrweb-paused *, html.rrweb-paused ::before, html.rrweb-paused ::after { animation-play-state: paused !important; }
"
`;

exports[`replayer > replays same timestamp events in correct order (with addAction) 1`] = `
"file-frame-1
<html>
  <head>
    <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\" />
  </head>
  <body>
    <div class=\\"replayer-wrapper\\">
      <div class=\\"replayer-mouse\\"></div>
      <canvas
        class=\\"replayer-mouse-tail\\"
        width=\\"1000\\"
        height=\\"800\\"
        style=\\"display: inherit\\"
      ></canvas
      ><iframe
        sandbox=\\"allow-same-origin\\"
        scrolling=\\"no\\"
        width=\\"1000\\"
        height=\\"800\\"
        style=\\"display: inherit; pointer-events: none\\"
      ></iframe>
    </div>
  </body>
</html>


file-frame-2
<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\" />
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"file-cid-0\\" />
  </head>
  <body>
    <span>Final - correct</span>
  </body>
</html>


file-cid-0
@charset \\"utf-8\\";

.rr-block { background: currentcolor; }

noscript { display: none !important; }

html.rrweb-paused *, html.rrweb-paused ::before, html.rrweb-paused ::after { animation-play-state: paused !important; }
"
`;

exports[`replayer > replays same timestamp events in correct order 1`] = `
"file-frame-1
<html>
  <head>
    <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\" />
  </head>
  <body>
    <div class=\\"replayer-wrapper\\">
      <div class=\\"replayer-mouse\\"></div>
      <canvas
        class=\\"replayer-mouse-tail\\"
        width=\\"1000\\"
        height=\\"800\\"
        style=\\"display: inherit\\"
      ></canvas
      ><iframe
        sandbox=\\"allow-same-origin\\"
        scrolling=\\"no\\"
        width=\\"1000\\"
        height=\\"800\\"
        style=\\"display: inherit; pointer-events: none\\"
      ></iframe>
    </div>
  </body>
</html>


file-frame-2
<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\" />
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"file-cid-0\\" />
  </head>
  <body>
    <span>Final - correct</span>
  </body>
</html>


file-cid-0
@charset \\"utf-8\\";

.rr-block { background: currentcolor; }

noscript { display: none !important; }

html.rrweb-paused *, html.rrweb-paused ::before, html.rrweb-paused ::after { animation-play-state: paused !important; }
"
`;
